--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,85 +1,101 @@
 
 <div class="main">
-  <div class="offer">
-    <% if logged_in? || !@offer.nil? %>
-    <% @offer.each do |offer| %>
-    <!-- 募集案件 -->
-    <div class="row">
-      <div class="col-md-6 offer.container" >
-        <%= link_to(offer_details_index_path(a: offer.id)) do %>
-        <!-- :a　はoffer.idのハッシュ。paramsに格納され、コントローラーでfindメソッドで、どのOfferテーブルを引っ張ってくるか指定するのに使う。 -->
-        <h3 class="offer_title">
-
-            <%= offer.title %>
-
-        </h3>
-        <div class="media"> <!-- http://bootstrap3.cyberlab.info/components/mediaObject.html#usage1 -->
-          <div class="media-left">
-            <div class="my_image">
-              <%#= link_to my_page_path(a: user_id) do %>
-              <%= image_tag offer.user.my_image.url %>
-              <%# end %>
-            </div>
-            <div class="bottom-of-left">
-
-                <div class="flag">
-                  <% case offer.user.nationality %>
-                    <% when "Japan" then %>
-                    <%= image_tag 'icons/flags/jpy.png' %>
-                    <% when "Korea" then %>
-                    <%=image_tag 'icons/flags/kre.png' %>
-                    <% when "Taiwan" then %>
-                    <%=image_tag 'icons/flags/twn.png' %>
-                    <% when "Hong Kong" then %>
-                    <%=image_tag 'icons/flags/hkn.png' %>
-                    <% when "China" then %>
-                    <%=image_tag 'icons/flags/chn.png' %>
-                    <% when "Australia" then %>
-                    <%=image_tag 'icons/flags/aus.png' %>
-                    <% when "New Zealand" then %>
-                    <%=image_tag 'icons/flags/nzl.png' %>
-                    <% when "France" then %>
-                    <%=image_tag 'icons/flags/fra.png' %>
-                    <% when "German" then %>
-                    <%=image_tag 'icons/flags/gmn.png' %>
-                    <% when "Nederland" then %>
-                    <%=image_tag 'icons/flags/ndl.png' %>
-                    <% when "Canada" then %>
-                    <%=image_tag 'icons/flags/cnd.png' %>
-                  <% end %>
-                </div>
-                <h4 class="nickname"><!-- nameはflagの右にfloatする -->
-                  <%= offer.user.nickname %>
-                </h4>
-
-              </div><!-- bottom-of-left -->
-
-          </div><!-- media-left -->
-
-          <ul class="media-right">
-            <li>渡航先　<%= offer.country %>:<%= offer.state %>,<% offer.region %></li>
-            <li>渡航予定日<%= offer.period_from %>　～　<%= offer.period_to %></li>
-          <div class="talkable-languages-container">
-            <li class="talkable-languages">
-              話したい言語　
-              <% offer.user.user_language_levels.each do |language| %>
-                <%= language.language %>
-              <% end %>
-            </li>
-            <li class="talkable-languages-level">
-              level
-              <% offer.user.user_language_levels.each do |level| %>
-              <%= level.level %>
-              <% end %>
-            </li>
-          </div>
-          </ul>
+    <div class="row search">
+      <div class=col-xs-2>
+        <div class="search-box">
+          <%= form_tag(root_path, method: "get") do %>
+            <%= label_tag :nickname, "名前" %>
+            <%= text_field_tag :nickname, params[:nickname] %>
+            <%= label_tag :gender, "性別" %>
+            <%= select_tag :gender, options_for_select(User.genders), include_blank: true %>
+            <%= label_tag :nationality, "国籍" %>
+            <%= select_tag :nationality, options_for_select(User.nationalities), include_blank: true %>
+            <%= submit_tag "検索" %>
+          <% end %>
         </div>
-        <!-- media -->
-      <% end %>
       </div>
     </div>
+
+    <div class="offer">
+    <% if logged_in? || !@offer.nil? %>
+      <% @offer.each do |offer| %>
+      <!-- 募集案件 -->
+      <div class="row">
+        <div class="col-md-6 offer.container" >
+          <%= link_to(offer_details_index_path(a: offer.id)) do %>
+          <!-- :a　はoffer.idのハッシュ。paramsに格納され、コントローラーでfindメソッドで、どのOfferテーブルを引っ張ってくるか指定するのに使う。 -->
+          <h3 class="offer_title">
+
+              <%= offer.title %>
+
+          </h3>
+          <div class="media"> <!-- http://bootstrap3.cyberlab.info/components/mediaObject.html#usage1 -->
+            <div class="media-left">
+              <div class="my_image">
+                <%#= link_to my_page_path(a: user_id) do %>
+                <%= image_tag offer.user.my_image.url %>
+                <%# end %>
+              </div>
+              <div class="bottom-of-left">
+
+                  <div class="flag">
+                    <% case offer.user.nationality %>
+                      <% when "Japan" then %>
+                      <%= image_tag 'icons/flags/jpy.png' %>
+                      <% when "Korea" then %>
+                      <%=image_tag 'icons/flags/kre.png' %>
+                      <% when "Taiwan" then %>
+                      <%=image_tag 'icons/flags/twn.png' %>
+                      <% when "HongKong" then %>
+                      <%=image_tag 'icons/flags/hkn.png' %>
+                      <% when "China" then %>
+                      <%=image_tag 'icons/flags/chn.png' %>
+                      <% when "Australia" then %>
+                      <%=image_tag 'icons/flags/aus.png' %>
+                      <% when "NewZealand" then %>
+                      <%=image_tag 'icons/flags/nzl.png' %>
+                      <% when "France" then %>
+                      <%=image_tag 'icons/flags/fra.png' %>
+                      <% when "German" then %>
+                      <%=image_tag 'icons/flags/gmn.png' %>
+                      <% when "Nederland" then %>
+                      <%=image_tag 'icons/flags/ndl.png' %>
+                      <% when "Canada" then %>
+                      <%=image_tag 'icons/flags/cnd.png' %>
+                    <% end %>
+                  </div>
+                  <h4 class="nickname"><!-- nameはflagの右にfloatする -->
+                    <%= offer.user.nickname %>
+                  </h4>
+
+                </div><!-- bottom-of-left -->
+
+            </div><!-- media-left -->
+
+            <ul class="media-right">
+              <li>渡航先　<%= offer.country %>:<%= offer.state %>,<% offer.region %></li>
+              <li>渡航予定日<%= offer.period_from %>　～　<%= offer.period_to %></li>
+            <div class="talkable-languages-container">
+              <li class="talkable-languages">
+                話したい言語　
+                <% offer.user.user_language_levels.each do |language| %>
+                  <%= language.language %>
+                <% end %>
+              </li>
+              <li class="talkable-languages-level">
+                level
+                <% offer.user.user_language_levels.each do |level| %>
+                <%= level.level %>
+                <% end %>
+              </li>
+            </div>
+            </ul>
+          </div>
+          <!-- media -->
+        <% end %>
+        </div>
+      </div>
+      <% end %>
     <% end %>
-    <% end %>
-  </div>
-</div>
+    </div>
+    </div>
