--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,14 +1,15 @@
 
 <div class="main">
     <div class="row search">
-      <div class=col-xs-2>
+      <div class=col-xs-8>
         <div class="search-box">
           <%= form_tag(root_path, method: "get") do %>
+          絞込検索
             <%= label_tag :nickname, "名前" %>
             <%= text_field_tag :nickname, params[:nickname] %>
-            <%= label_tag :gender, "性別" %>
+            <%= label_tag :gender, "　性別" %>
             <%= select_tag :gender, options_for_select(User.genders), include_blank: true %>
-            <%= label_tag :nationality, "国籍" %>
+            <%= label_tag :nationality, "　国籍" %>
             <%= select_tag :nationality, options_for_select(User.nationalities), include_blank: true %>
             <%= submit_tag "検索" %>
           <% end %>
