--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,34 +6,34 @@
         <%= form_for :user,url:users_path do |f| %>
           <div class="form-group">
             <%= f.label :nickname, class: 'text-white' %>
-            <%= f.text_field :nickname, class: 'form-control' %>
+            <%= f.text_field :nickname, class: 'form-control',required: true %>
           </div>
           <div class="form-group">
             <%= f.label :mail, class: 'text-white' %>
             <!-- <label class="text-white" for="mail">メールアドレス</label> -->
-            <%= f.email_field :mail, class: 'form-control' %>
+            <%= f.email_field :mail, class: 'form-control',required: true %>
           </div>
           <div class="form-group">
             <%= f.label :password, class: 'text-white' %>
-            <%= f.password_field :password, class: 'form-control' %>
+            <%= f.password_field :password, class: 'form-control',required: true %>
           </div>
           <div class="form-group">
             <%= f.label :password_confirmation, class: 'text-white' %>
-            <%= f.password_field :password_confirmation, class: 'form-control' %>
+            <%= f.password_field :password_confirmation, class: 'form-control',required: true%>
           </div>
           <div class="form-group">
             <%= f.label :プロフィール画像を挿入%>
-            <%= f.file_field :my_image %>
+            <%= f.file_field :my_image,required: true %>
           </div>
           <div class="form-group">
             <div class="radio-inline">
               <label>
-                <%= f.radio_button :gender, "男性" %>男性
+                <%= f.radio_button :gender, :men, checked: true %>男性
               </label>
             </div>
             <div class="radio-inline">
               <label>
-                <%= f.radio_button :gender, "女性" %>女性
+                <%= f.radio_button :gender, :women %>女性
               </label>
             </div>
           </div>
@@ -50,7 +50,7 @@
             <%= f.date_select :birthday,
                               :start_year        => 1980,
                               :use_month_numbers => true ,
-                              :date_separator => "-" %>
+                              :date_separator => "-",required: true %>
           </div>
           <div class="form-group">
             <%#= f.label :age, class: 'text-white' %>
@@ -58,9 +58,9 @@
           </div>
           <div class="form-group">
              <%= f.label :"国籍" %>
-             <%= f.select :nationality,
-            [["日本","Japan"],["Korea","Korea"],["Taiwan","Taiwan"],["HongKong","HongKong"],["China","China"],["Australia","Australia"],
-            ["NewZealand","NewZealand"],["France","France"],["German","German"],["Nederland","Nederland"],["Canada","Canada"]] ,class: 'form-control' %>
+             <%=f.select :nationality, User.nationalities.keys.to_a, {}, class: 'form-control',required: true %>
+          <!-- [["日本","Japan"],["Korea","Korea"],["Taiwan","Taiwan"],["HongKong","HongKong"],["China","China"],["Australia","Australia"],
+          ["NewZealand","NewZealand"],["France","France"],["German","German"],["Nederland","Nederland"],["Canada","Canada"]]  -->
             <%#= f.select :nationality,
             [["Japan"]["Korea"]["China"]["Chinese Taipei"]["HongKong"]["Australia"]["Canada"]["NewZealand"]["Ireland"]["German"]["UK"]["France"]]
              class: 'form-control' %>
@@ -95,7 +95,7 @@
             <%= f.label :"自己紹介", class:'text-white' %>
             <%= f.text_field :introduce_yourself, class:'form-control' %>
           </div>
-debugger
+
           <%= f.submit "登録", class: 'btn-block btn-white' %>
         <% end %>
       </div>
