--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,8 +26,12 @@
             <%= f.file_field :my_image,required: true %>
           </div>
           <div class="form-group">
+            <div class="gender">
+              <%#= f.label :"性別" %>
+              <%#=f.select :gender, User.genders.keys.to_a, {}, class: 'form-control',required: true %>
             <div class="radio-inline">
               <label>
+
                 <%= f.radio_button :gender, :men, checked: true %>男性
               </label>
             </div>
