--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -94,6 +94,9 @@
             <%= level.level %>
             <% end %>
           </li>
+          <li class="time">
+            <%= offer.created_at %>
+          </li>
         </div>
         </ul>
       </div>
