--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -12,7 +12,7 @@
               <%= label_tag :nationality, "　国籍" %>
               <%= select_tag :nationality, options_for_select(User.nationalities), include_blank: true %>
               <%= submit_tag "検索" %>
-              <!-- <#% debugger %> -->
+              <%# debugger %>
             <% end %>
         </div>
       </div>
