--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -10,6 +10,8 @@
               <%= select_tag :gender, options_for_select(User.genders), include_blank: true %>
               <%= label_tag :nationality, "　国籍" %>
               <%= select_tag :nationality, options_for_select(User.nationalities), include_blank: true %>
+              <%= label_tag :language, "　話せる言語" %>
+              <%= select_tag :language, options_for_select(User.languages.languages), include_blank: true %>
               <%= submit_tag "検索" %>
               <%# debugger %>
             <% end %>
