--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,5 +6,6 @@
 @import "custom";
 @import "tops";
 @import "users";
+@import "comments";
 // *= require bootstrap-datetimepicker
 // datetimepickerに必要
