--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.chat{
+  .comments_container{
+    .comments_image{
+      img{
+      margin-left: 11px;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-position: center center;
+      // display: inline-block;  // inlineかどうかまだ未確定
+      }
+    .comments_nickname{
+      margin-left: 11px;
+      text-align:center;
+      }
+    .comments_contents{
+
+    }
+    .comments_created_at{
+
+    }
+
+    }
+  }
+}
