--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -3,6 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .chat{
   .comments_container{
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    background: -webkit-repeating-linear-gradient(-45deg, #f0f8ff, #f0f8ff 3px,#e9f4ff 3px, #e9f4ff 7px);
+    background: repeating-linear-gradient(-45deg, #f0f8ff, #f0f8ff 3px,#e9f4ff 3px, #e9f4ff 7px);
+    float: left;
+
     .comments_image{
       img{
       margin-left: 11px;
@@ -11,16 +17,20 @@
       border-radius: 50%;
       background-position: center center;
       // display: inline-block;  // inlineかどうかまだ未確定
+      // display: inline;
       }
     .comments_nickname{
       margin-left: 11px;
       text-align:center;
+      display: inline-block;
+      float: left;
+      clear: both;
       }
     .comments_contents{
-
+      display: inline-block;
     }
     .comments_created_at{
-
+      display: inline-block;
     }
 
     }
