--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                     <% end %>
                   </li>
                   <li>
-                    <%= link_to '#' do %>
+                    <%= link_to comments_allcomments_path do %>
                       <%= image_tag 'icons/message.png' %><!--メッセージ-->
                     <% end %>
                   </li>
