--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -91,6 +91,10 @@
                 <%= level.level %>
                 <% end %>
               </li>
+              <li class="fb_link">
+                Facebook
+                <% offer.user.Fb_link %>
+              </li>
               <li class="created_at">
                 投稿日時
                 <%= offer.created_at %>
