--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -16,12 +16,12 @@
             <li class="comments_created_at">
               <%= comment.created_at %>
             </li>
-          </ul>
+           </ul>
           <% end %>
       </div>
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Add your comment</h1>
-        <%= form_for @comment do |f| %>
+        <%= form_for @comment, url: comments_index_path do |f| %>
           <div class="form-group">
             <%= f.label :contents %>
             <%= f.text_area :contents, class:'form-control' %>
