--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -101,6 +101,11 @@
             <%= f.text_field :introduce_yourself, class:'form-control' %>
           </div>
 
+          <div class="form-group">
+            <%= f.label :"Facebookのマイページのリンクをコピー＆ペーストして下さい。", class:'text-white' %>
+            <%= f.text_field :Fb_link, class:'form-control' %>
+          </div>
+
           <%= f.submit "登録", class: 'btn-block btn-white' %>
         <% end %>
       </div>
