heroku not work

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,5 +7,6 @@
 @import "tops";
 @import "users";
 @import "comments";
+@import "offer_details";
 // *= require bootstrap-datetimepicker
 // datetimepickerに必要
