--- a/app/assets/stylesheets/offer_details.scss
+++ b/app/assets/stylesheets/offer_details.scss
@@ -1,3 +1,30 @@
-// Place all the styles related to the offer_details controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.container{
+
+
+  .offer-top{
+    .offer-image{
+  position:relative;
+  width: 600px;
+  height:300px;
+  margin:0 auto;
+  border:#F70841 1px solid;
+
+      img{
+       position: absolute;
+       top: 0;
+       left: 0;
+       right: 0;
+       bottom: 0;
+       margin: auto;
+       width:320px;
+       height:230px;
+      }
+    }
+    .offer-place{}
+    .offer-period{}
+    .offer-title{}
+    .offer-detail{}
+  }
+
+
+}
