--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,7 +1,6 @@
 
 <div class="main">
     <div class="row search">
-      <div class=col-xs-8>
         <div class="search-box">
             <%= form_for :aaa ,url: tops_search_path, method:'get' do |f| %>
               <%= f.label :nickname, "名前" %>
@@ -16,21 +15,18 @@
               <%# debugger %>
             <% end %>
         </div>
-      </div>
     </div>
 
     <div class="offer">
     <% if logged_in? || !@offer.nil? %>
       <% @offer.each do |offer| %>
       <!-- 募集案件 -->
-      <div class="row">
-        <div class="col-md-5 offer.container" >
+      <div class="row offer">
+        <div class="offer_container" >
           <%= link_to(offer_details_index_path(a: offer.id)) do %>
           <!-- :a　はoffer.idのハッシュ。paramsに格納され、コントローラーでfindメソッドで、どのOfferテーブルを引っ張ってくるか指定するのに使う。 -->
           <h3 class="offer_title">
-
               <%= offer.title %>
-
           </h3>
           <div class="media"> <!-- http://bootstrap3.cyberlab.info/components/mediaObject.html#usage1 -->
             <div class="media-left">
